--- a/.nvm/releases/README.adoc
+++ b/.nvm/releases/README.adoc
@@ -3,23 +3,26 @@ To determine the specific version of node headers to include in this folder, pul
 ```
 podman run -it --rm --entrypoint /bin/bash --user root registry.access.redhat.com/ubi9/nodejs-22 -c "node --version"
 
-v22.13.1
+v22.16.0
 ```
 
 Or, go to https://catalog.redhat.com/software/containers/ubi9/nodejs-22/66431d1785c5c3a31edd24f1?container-tabs=packages and search for `nodejs` to get the version.
 
-As of 2025/05/14, this version is `v22.13.1`; however there is a newer RPM at version `v22.15.0`.
+As of 2025/06/04, this version is `v22.16.0`; the latest RPM is also `v22.16.0`.
 
 To download headers:
 
 ```
-NODE_HEADERS_VERSION=$(podman run -it --rm --entrypoint /bin/bash --user root registry.access.redhat.com/ubi9/nodejs-22 -c "node --version")
+NODE_HEADERS_VERSION=$(podman run -it --rm --entrypoint /bin/bash --user root registry.access.redhat.com/ubi9/nodejs-22 -c "node --version" | tr -d "\n\r")
 # or some hardcoded value if there's a newer RPM
-NODE_HEADERS_VERSION=v22.15.0
+NODE_HEADERS_VERSION=v22.16.0
 
 cd .nvm/releases/
 curl -sSLO https://nodejs.org/dist/${NODE_HEADERS_VERSION}/node-${NODE_HEADERS_VERSION}-headers.tar.gz
 git add node-${NODE_HEADERS_VERSION}-headers.tar.gz
+
+cd ../../
+echo "${NODE_HEADERS_VERSION/v}" > .nvmrc
 ```
 
-Then commit the new file to the appropriate branches of this repo.
+Then commit the new / updated files to the appropriate branches of this repo.
